# starter-resource-server/src/config/entities/index.ts
@@ -1,9 +1,5 @@
 import { user } from './user';
-import { store } from './store';
-import { video } from './video';
 
 export const entities: any = {
     user,
-    store,
-    video,
 };
